--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             эффективные решения<br />
             для вашего бизнеса
           </h1>
-          <button class="hero-btn" type="button">Заказать услугу</button>
+          <button class="hero-btn" type="button" data-modal-open>Заказать услугу</button>
         </div>
       </section>
 
@@ -146,6 +146,9 @@
                 width="370"
                 height="295"
               />
+              <div class="activity-description-container">
+                <p class="activity-description">Десктопные приложения</p>
+              </div>
             </li>
             <li class="activity-item card-set-item">
               <img
@@ -155,6 +158,9 @@
                 width="370"
                 height="295"
               />
+              <div class="activity-description-container">
+                <p class="activity-description">Мобильные приложения</p>
+              </div>
             </li>
             <li class="activity-item card-set-item">
               <img
@@ -164,6 +170,9 @@
                 width="370"
                 height="295"
               />
+              <div class="activity-description-container">
+                <p class="activity-description">Дизайнерские решения</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -633,5 +642,17 @@
         </div>
       </div>
     </footer>
+
+    <!-- Modal window -->
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-btn" data-modal-close>
+          <svg class="modal-btn-icon" width="18" height="18">
+            <use href="./images/icons.svg#close-black-icon"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
