--- a/portfolio.html
+++ b/portfolio.html
@@ -91,12 +91,22 @@
           <ul class="projects-list card-set list">
             <li class="projects-item card-set-item">
               <a class="projects-link link" href="#">
-                <img
-                  class="projects-img"
-                  src="./images/portfolio/tekhnokryak.jpg"
-                  alt="Технокряк"
-                  width="370"
-                />
+                <div class="project-element">
+                  <img
+                    class="projects-img"
+                    src="./images/portfolio/tekhnokryak.jpg"
+                    alt="Технокряк"
+                    width="370"
+                  />
+                  <div class="project-overlay">
+                    <p class="overlay-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
+                </div>
+
                 <div class="projects-caption">
                   <h2 class="projects-subtitle">Технокряк</h2>
                   <p class="projects-text">Веб-сайт</p>
