--- a/portfolio.html
+++ b/portfolio.html
@@ -91,14 +91,14 @@
           <ul class="projects-list card-set list">
             <li class="projects-item card-set-item">
               <a class="projects-link link" href="#">
-                <div class="project-element">
+                <div class="projects-element">
                   <img
                     class="projects-img"
                     src="./images/portfolio/tekhnokryak.jpg"
                     alt="Технокряк"
                     width="370"
                   />
-                  <div class="project-overlay">
+                  <div class="projects-overlay">
                     <p class="overlay-text">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
                       сервисов. Все это позволит посетителю получить исчерпывающие сведения о
